--- a/index.html
+++ b/index.html
@@ -240,6 +240,6 @@
       </div>
     </footer>
     <!-- scripts-->
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
